--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -95,7 +95,7 @@
             margin-left: 5px;
             margin-right: 21px;
             margin-bottom: 20px;
-            border: 1px solid #000;
+            border: 1px solid gray;
             
         }
 
