--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -91,11 +91,11 @@
             display: inline-block;
             width: 240px;
             height: 390px;
-            background-color: #fff;
+            background-color: #eee;
             margin-left: 5px;
             margin-right: 21px;
             margin-bottom: 20px;
-            border: 0.5px solid gray;
+            
             
         }
 
