--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -114,6 +114,10 @@
             list-style: none;
             margin-left: 10px;
         }
+
+        rate {
+            font-size: 14px;
+        }
     </style>
 </head>
     
@@ -128,8 +132,8 @@
             <img v-bind:src=item.img_url>
             <li><b>{item.name}</b></li>
             <li><i>{item.description}</i></li>
-            <li v-if="item.num_rated != 0"> {item.num_bought} people bought, {item.num_rated} rated, Avg. rating: {item.total_score/item_num_rated}</li>
-            <li v-else> {item.num_bought} people bought, {item.num_rated} rated Avg. rating: N/A </li>
+            <li id = "rate" v-if="item.num_rated != 0"> {item.num_bought} people bought, {item.num_rated} rated, Avg. rating: {item.total_score/item_num_rated}</li>
+            <li id = "rate" v-else> {item.num_bought} people bought, {item.num_rated} rated Avg. rating: N/A </li>
             <button id="confirm_" @click="buy(item.product_id)">Buy</button>
         </div>
     </div>
