--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -115,7 +115,7 @@
             margin-left: 10px;
         }
 
-        rate {
+        #rate {
             font-size: 14px;
         }
     </style>
