--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -116,7 +116,8 @@
         }
 
         #rate {
-            font-size: 14px;
+            font: 1em sans-serif;
+            font-size: 15px;
         }
     </style>
 </head>
@@ -131,7 +132,7 @@
         <div id="items" v-for='(item, i) in items' @click="buy(item.product_id)">
             <img v-bind:src=item.img_url>
             <li><b>{item.name}</b></li>
-            <li><i>{item.description}</i></li>
+            <li><i>{item.description}</i></li><br>
             <li id = "rate" v-if="item.num_rated != 0"> {item.num_bought} people bought, {item.num_rated} rated, Avg. rating: {item.total_score/item_num_rated}</li>
             <li id = "rate" v-else> {item.num_bought} people bought, {item.num_rated} rated Avg. rating: N/A </li>
             <button id="confirm_" @click="buy(item.product_id)">Buy</button>
