--- a/templates/orders.html
+++ b/templates/orders.html
@@ -78,7 +78,7 @@
     <div id="orders_body">
         <h2>Delivered orders:</h2>
         <ul v-for='item in delivered_order_list'>
-            <li>Tracking No: {item.shipid},&nbsp;&nbsp;</li> 
+            <li>Tr.: {item.shipid},&nbsp;&nbsp;</li> 
             <li>Item: {item.name},&nbsp;&nbsp;</li> 
             <li>Amount: {item.amount},&nbsp;&nbsp;</li>
             <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y},&nbsp;&nbsp;</li>
