--- a/templates/orders.html
+++ b/templates/orders.html
@@ -78,10 +78,10 @@
     <div id="orders_body">
         <h2>Delivered orders:</h2>
         <ul v-for='item in delivered_order_list'>
-            <li>Tr.: {item.shipid},&nbsp;&nbsp;</li> 
+            <li>Tr: {item.shipid},&nbsp;&nbsp;</li> 
             <li>Item: {item.name},&nbsp;&nbsp;</li> 
-            <li>Amount: {item.amount},&nbsp;&nbsp;</li>
-            <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y},&nbsp;&nbsp;</li>
+            <li>Amt: {item.amount},&nbsp;&nbsp;</li>
+            <li>Address: ({item.address_x}, {item.address_y}),&nbsp;&nbsp;</li>
             <li v-if="item.ups_account_name != ''"> UPS: {item.ups_account_name}&nbsp;&nbsp;</li>
             <li>Status:<b style="color:green"> {item.status}</b></li>
             <img v-bind:src=item.img_url> 
