--- a/templates/orders.html
+++ b/templates/orders.html
@@ -127,6 +127,7 @@
                             return "invalid input"
                         }
                         x = parseInt(x)
+                        console.log(x)
                         if (x == null) {
                             return "invalid input"
                         }
