--- a/templates/orders.html
+++ b/templates/orders.html
@@ -128,6 +128,7 @@
                             alert("Invalid input")
                             return 
                     }
+                    console.log(x)
                     x = parseInt(x)
                     
                     if (x == null) {
