--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -133,7 +133,7 @@
             <img v-bind:src=item.img_url>
             <li><b>{item.name}</b></li>
             <li><i>{item.description}</i></li>
-            <li id = "rate" v-if="item.num_rated != 0"> {item.num_bought} people bought, {item.num_rated} rated<br> Avg. rating: {item.total_score/item_num_rated}</li>
+            <li id = "rate" v-if="item.num_rated != 0"> {item.num_bought} people bought, {item.num_rated} rated<br> Avg. rating: {item.total_score/item.num_rated}</li>
             <li id = "rate" v-else> {item.num_bought} people bought, {item.num_rated} rated <br>Avg. rating: N/A </li>
             <button id="confirm_" @click="buy(item.product_id)">Buy</button>
         </div>
